Grid: prevent horizontal collapse

--- a/src/assets/less/base/grid.less
+++ b/src/assets/less/base/grid.less
@@ -24,6 +24,7 @@
     .row {
 
         .col {
+            min-height: 1px; /* Prevent horizontal collapse: https://css-tricks.com/make-sure-columns-dont-collapse-horizontally */
 
             /* Content first on narrow screens; right on wider screens */
             &.flow-opposite {
